# terminal-drums

./: .gitignore  AGENTS.md  Cargo.toml  PROGRESS.md  README.md
.github/workflows/: release.yml
assets/kits/placeholder/: kit.toml
assets/kits/slam/: kit.toml
assets/tracks/afro-cuban-6-4/: meta.toml  track.mid
assets/tracks/balkan-7-8/: meta.toml  track.mid
assets/tracks/basic-rock/: meta.toml  track.mid
assets/tracks/blues-shuffle/: meta.toml  track.mid
assets/tracks/demo/: meta.toml
assets/tracks/flamenco-3-4/: meta.toml  track.mid
assets/tracks/funk-afro/: meta.toml  track.mid
assets/tracks/funk-groove/: meta.toml  track.mid
assets/tracks/heavy-rock-1/: meta.toml  track.mid
assets/tracks/heavy-rock-2/: meta.toml  track.mid
assets/tracks/heavy-rock-3/: meta.toml  track.mid
assets/tracks/heavy-rock-4/: meta.toml  track.mid
assets/tracks/hip-hop-1/: meta.toml  track.mid
assets/tracks/hip-hop-2/: meta.toml  (+1 more)
memory/: project_terminal_drums.md  user_profile.md
spec/init-project/: SPEC.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/audio/: AGENTS.md  backtrack.rs  engine.rs  kit.rs  metronome.rs  mod.rs
src/data/: db.rs  kit_bundle.rs  mod.rs  profile.rs  track_bundle.rs
src/engine/: mod.rs  playback.rs  practice.rs  scoring.rs  timing.rs
src/input/: AGENTS.md  command.rs  key_map.rs  mod.rs  thread.rs  vim_mode.rs
src/midi/: AGENTS.md  drum_map.rs  mod.rs  parser.rs  types.rs
src/ui/: AGENTS.md  layout.rs  mod.rs
tests/: gen_samples.rs  midi_parsing.rs  midi_test_gen.rs  scoring.rs
tests/fixtures/: basic_4_4.mid
(+65 files in other folders)
