[package]
name = "terminal-drums"
version = "0.1.0"
edition = "2021"
description = "Terminal-based drum training app with MIDI visualization and vim keybindings"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "tdrums"
path = "src/main.rs"

[lib]
name = "terminal_drums"
path = "src/lib.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
kira = "0.9"
midly = "0.5"
spin_sleep = "1"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
thiserror = "2"
anyhow = "1"
sha2 = "0.10"

[dev-dependencies]
insta = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
